<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SearchJokeActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/twenty"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <EditText
        android:id="@+id/etSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_string"
        android:inputType="text"
        android:layout_margin="@dimen/twenty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty"
        android:text="@string/search"
        android:background="@color/purple_200"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty"
        android:text="@string/choose_category"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch"/>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/programming"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvCategory"
        android:textSize="18sp" />
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/misc"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/checkBox1"
        android:textSize="18sp" />
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/checkBox2"
        android:textSize="18sp" />
    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pun"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/checkBox3"
        android:textSize="18sp" />
    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spooky"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/checkBox4"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/christmas"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/checkBox5"
        android:textSize="18sp" />
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>