<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/twenty"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <Button
        android:id="@+id/randomJokeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_joke"
        android:textColor="@android:color/white"
        android:background="@color/purple_500"
        android:layout_marginTop="@dimen/hundred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jokeListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joke_list"
        android:textColor="@android:color/white"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/hundred"
        app:layout_constraintTop_toBottomOf="@+id/randomJokeBtn" />


    <Button
        android:id="@+id/textInputBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_input"
        android:textColor="@android:color/white"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/hundred"
        app:layout_constraintTop_toBottomOf="@+id/jokeListBtn" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>